fix sideways overflow on preview sidebar

--- a/src/media/css/transsonic.styl
+++ b/src/media/css/transsonic.styl
@@ -92,7 +92,7 @@ h3 {
         -webkit-transform: translateX(0px);
         background: $medium-gray;
         height: 100%;
-        overflow: scroll;
+        overflow-y: scroll;
         padding-top: 14px;
         position: fixed;
         right: 0;
